fixed ratios in css
ratio between screenshot, comment list and frame list fixed. exchanged default scrollbar with webkit-scrollbar.

--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -178,8 +178,8 @@ body {
     flex: 5;
     align-self: flex-start;
 
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    /* height: 100%; */
     margin: 2px;
 }
 
@@ -341,4 +341,25 @@ body {
     height: 20px;
     padding: 2px;
     word-break: break-all;
+}
+
+/* https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp */
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: var(--base-light);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--base-color);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--base-dark);
 }
